# shit_fsm

./: CMakeLists.txt  main.cpp
